# hy-motion-api

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.toml  hy-motion.bat  hy-motion.ps1  hy-motion.sh  pyproject.toml  requirements.txt
docs/: api.md
src/hy_motion_api/: main.py
src/hy_motion_api/core/: auth.py  config.py  queue.py  runtime.py  worker.py
src/hy_motion_api/routes/: health.py  queue.py  tasks.py
src/hy_motion_api/schemas/: task.py
